fix table overflow

--- a/m1/s1/g4/homework/assets/css/style.css
+++ b/m1/s1/g4/homework/assets/css/style.css
@@ -142,6 +142,10 @@ tbody tr:last-child {
     border-bottom: 2px solid #3366cc;
 }
 
+.table {
+    overflow: auto;
+}
+
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
